# tasks-api

./: .bazelrc  .env.template  .gitignore  .golangci.yml  .mcp.json  AGENTS.md  BUILD.bazel  CLAUDE.md  Dockerfile  LICENSE.md  MODULE.bazel  README.md  Taskfile.yml  WORKSPACE.bazel  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  main.go
.claude/: settings.json
.github/workflows/: ci.yml  docker-publish.yml
api/tasks/: .mcp.json  BUILD.bazel  Dockerfile  docker-compose.yml  go.mod  go.sum  lefthook.yml  main.go
api/tasks/internal/access/: BUILD.bazel  access.go
api/tasks/internal/config/: BUILD.bazel  config.go  config_test.go
api/tasks/internal/httpserver/: BUILD.bazel  health_integration_test.go  server.go  server_test.go
api/tasks/internal/httpserver/humautil/: errors.go  role.go
api/tasks/internal/httpserver/middleware/: BUILD.bazel  auth.go  auth_test.go  logging.go  logging_test.go
api/tasks/internal/httpserver/projects/: BUILD.bazel  handler.go  handler_test.go  init.go  projects_integration_test.go  tasks_integration_test.go
api/tasks/internal/httpserver/render/: render.go  render_test.go
api/tasks/internal/httpserver/tags/: BUILD.bazel  handler.go  handler_test.go  init.go  tags_integration_test.go
api/tasks/internal/httpserver/tasks/: BUILD.bazel  handler.go  handler_test.go  init.go  tasks_integration_test.go
api/tasks/internal/httpserver/users/: BUILD.bazel  handler.go  handler_integration_test.go  handler_test.go
api/tasks/internal/logger/: logger.go  logger_test.go
api/tasks/internal/mcpserver/: BUILD.bazel  health_integration_test.go  server.go  server_test.go
api/tasks/internal/mcpserver/tools/: BUILD.bazel  init.go  projects.go  projects_integration_test.go  projects_test.go  tags.go  tags_integration_test.go  tags_test.go  tasks.go  tasks_integration_test.go  tasks_test.go
api/tasks/internal/model/: BUILD.bazel  model.go
api/tasks/internal/recurrence/: BUILD.bazel  validate.go
api/tasks/internal/repo/: BUILD.bazel  repo.go
api/tasks/internal/store/postgres/: BUILD.bazel  db.go  db_integration_test.go  locks.go  projects.go  projects_integration_test.go  store.go  tags.go  tags_integration_test.go  tasks.go  tasks_integration_test.go  users.go  users_integration_test.go
api/tasks/internal/store/postgres/migrations/: 00001_initial.sql  00002_recurring_tasks.sql  00003_user_search_trgm.sql  00004_task_indexes.sql
api/tasks/internal/testing/db/: BUILD.bazel  db.go
api/tasks/internal/testing/http/: BUILD.bazel  huma.go  integration.go
api/tasks/internal/testing/mcp/: BUILD.bazel  integration.go
api/tasks/internal/testing/mock/: BUILD.bazel  project_repo.go  tag_repo.go  task_repo.go  user_repo.go
api/tasks/internal/testing/seed/: BUILD.bazel  project.go  task.go  user.go
api/tasks/scripts/mincov/: BUILD.bazel
api/tasks/scripts/pkgs/: BUILD.bazel  main.go
docs/: README.md
docs/architecture/: overview.md
docs/development/: local.md
internal/config/: config.go  config_test.go
internal/httpserver/: health_integration_test.go  http_integration_test.go  server.go  server_test.go
internal/httpserver/httptestutil/: integration.go
internal/httpserver/humautil/: errors.go  role.go  validation.go
internal/httpserver/middleware/: auth.go  auth_test.go  logging.go  logging_test.go
internal/httpserver/projects/: access.go  handler.go  handler_extra_test.go  handler_test.go  projects_integration_test.go  tasks_integration_test.go
internal/httpserver/render/: error.go  render.go  render_test.go
internal/httpserver/tags/: handler.go  handler_test.go  tags_integration_test.go
internal/httpserver/tasks/: handler.go  handler_extra_test.go  handler_test.go  tasks_integration_test.go
internal/httpserver/users/: handler.go  handler_integration_test.go  handler_test.go
internal/logger/: logger.go  logger_test.go
internal/mcpserver/: health_integration_test.go  server.go  server_test.go
internal/mcpserver/tools/: projects.go  projects_integration_test.go  projects_test.go  tags.go  tags_integration_test.go  tags_test.go  tasks.go  tasks_integration_test.go  tasks_test.go
internal/model/: model.go
internal/repo/: repo.go
internal/store/postgres/: db_integration_test.go  db_test.go  locks.go  projects.go  projects_integration_test.go  projects_test.go  recurrence.go  recurrence_test.go  store.go  tags.go  tags_integration_test.go  tasks.go  tasks_integration_test.go  users.go  users_integration_test.go
internal/store/postgres/migrations/: 00001_initial.sql
internal/store/sqlite/: db.go  db_test.go  projects.go  projects_test.go  recurrence.go  recurrence_test.go  store.go  tags.go  tags_test.go  tasks.go  tasks_test.go  users.go  users_test.go
internal/store/sqlite/migrations/: 00001_initial.sql  00002_recurring_tasks.sql
internal/testing/db/: db.go
internal/testing/http/: integration.go
internal/testing/mcp/: integration.go
internal/testing/mock/: project_repo.go  task_repo.go  testrouter.go  user_repo.go
internal/testing/seed/: args.go  http.go  mcp.go  project.go  task.go  user.go
libs/hs-common/: go.mod  go.sum
libs/hs-common/auth/: BUILD.bazel  auth.go  auth_test.go
libs/hs-common/config/: config.go
libs/hs-common/huma/: BUILD.bazel  huma.go  huma_test.go
libs/hs-common/humautil/: errors.go
libs/hs-common/logger/: BUILD.bazel  logger.go  logger_test.go
libs/hs-common/logmiddleware/: BUILD.bazel  logmiddleware.go  logmiddleware_test.go
libs/hs-common/logmw/: logmw.go
libs/hs-common/postgres/: BUILD.bazel  postgres.go  postgres_test.go
libs/hs-common/render/: BUILD.bazel  render.go  render_test.go
libs/hs-common/repo/: BUILD.bazel  repo.go  repo_test.go
libs/hs-common/role/: BUILD.bazel  role.go  role_test.go
libs/hs-common/testdb/: BUILD.bazel  testdb.go  testdb_test.go
scripts/mincov/: main.go
scripts/pkgs/: main.go
tools/: go.mod  go.sum
