load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tasks_lib",
    srcs = ["main.go"],
    importpath = "github.com/js-beaulieu/hs-api/api/tasks",
    visibility = ["//visibility:private"],
    deps = [
        "//api/tasks/internal/config",
        "//api/tasks/internal/httpserver",
        "//api/tasks/internal/httpserver/middleware",
        "//api/tasks/internal/mcpserver",
        "//api/tasks/internal/store/postgres",
        "//libs/hs-common/logger",
        "@com_github_joho_godotenv//:godotenv",
    ],
)

go_binary(
    name = "tasks",
    embed = [":tasks_lib"],
    visibility = ["//visibility:public"],
)
