load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "github.com/js-beaulieu/hs-api/libs/hs-common/logger",
    visibility = ["//visibility:public"],
    deps = ["@com_github_lmittmann_tint//:tint"],
)

alias(
    name = "go_default_library",
    actual = ":logger",
    visibility = ["//visibility:public"],
)

go_test(
    name = "logger_test",
    srcs = ["logger_test.go"],
    embed = [":logger"],
)
