load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repo",
    srcs = ["repo.go"],
    importpath = "github.com/js-beaulieu/hs-api/libs/hs-common/repo",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":repo",
    visibility = ["//visibility:public"],
)

go_test(
    name = "repo_test",
    srcs = ["repo_test.go"],
    embed = [":repo"],
)
