load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "testdb",
    srcs = ["testdb.go"],
    importpath = "github.com/js-beaulieu/hs-api/libs/hs-common/testdb",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//stdlib",
        "@com_github_testcontainers_testcontainers_go_modules_postgres//:postgres",
    ],
)

alias(
    name = "go_default_library",
    actual = ":testdb",
    visibility = ["//visibility:public"],
)

go_test(
    name = "testdb_test",
    srcs = ["testdb_test.go"],
    embed = [":testdb"],
)
