load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/js-beaulieu/hs-api/api/tasks/internal/config",
    visibility = ["//api/tasks:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":config",
    visibility = ["//api/tasks:__subpackages__"],
)
