load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "recurrence",
    srcs = ["validate.go"],
    importpath = "github.com/js-beaulieu/hs-api/api/tasks/internal/recurrence",
    visibility = ["//api/tasks:__subpackages__"],
    deps = [
        "@com_github_danielgtaylor_huma_v2//:huma",
        "@com_github_teambition_rrule_go//:rrule-go",
    ],
)

alias(
    name = "go_default_library",
    actual = ":recurrence",
    visibility = ["//api/tasks:__subpackages__"],
)
