load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "middleware",
    srcs = [
        "auth.go",
        "logging.go",
    ],
    importpath = "github.com/js-beaulieu/hs-api/api/tasks/internal/httpserver/middleware",
    visibility = ["//api/tasks:__subpackages__"],
    deps = [
        "//api/tasks/internal/config",
        "//api/tasks/internal/model",
        "//api/tasks/internal/repo",
        "//libs/hs-common/auth",
        "//libs/hs-common/logmiddleware",
    ],
)

alias(
    name = "go_default_library",
    actual = ":middleware",
    visibility = ["//api/tasks:__subpackages__"],
)

go_test(
    name = "middleware_test",
    srcs = [
        "auth_test.go",
        "logging_test.go",
    ],
    deps = [
        ":middleware",
        "//api/tasks/internal/config",
        "//api/tasks/internal/model",
        "//api/tasks/internal/testing/mock",
        "//libs/hs-common/logger",
        "//libs/hs-common/repo",
        "@com_github_google_uuid//:uuid",
    ],
)
