load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "projects",
    srcs = ["handler.go"],
    importpath = "github.com/js-beaulieu/hs-api/api/tasks/internal/httpserver/projects",
    visibility = ["//api/tasks:__subpackages__"],
    deps = [
        "//api/tasks/internal/access",
        "//api/tasks/internal/httpserver/middleware",
        "//api/tasks/internal/model",
        "//api/tasks/internal/recurrence",
        "//api/tasks/internal/repo",
        "//libs/hs-common/repo",
        "@com_github_danielgtaylor_huma_v2//:huma",
        "@com_github_google_uuid//:uuid",
    ],
)

alias(
    name = "go_default_library",
    actual = ":projects",
    visibility = ["//api/tasks:__subpackages__"],
)

go_test(
    name = "projects_test",
    srcs = ["handler_test.go"],
    deps = [
        ":projects",
        "//api/tasks/internal/httpserver/middleware",
        "//api/tasks/internal/model",
        "//api/tasks/internal/repo",
        "//api/tasks/internal/testing/mock",
        "//libs/hs-common/huma",
        "//libs/hs-common/repo",
    ],
)
