load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tools",
    srcs = [
        "projects.go",
        "tags.go",
        "tasks.go",
    ],
    importpath = "github.com/js-beaulieu/hs-api/api/tasks/internal/mcpserver/tools",
    visibility = ["//api/tasks:__subpackages__"],
    deps = [
        "//api/tasks/internal/access",
        "//api/tasks/internal/httpserver/middleware",
        "//api/tasks/internal/model",
        "//api/tasks/internal/repo",
        "@com_github_google_uuid//:uuid",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
    ],
)

alias(
    name = "go_default_library",
    actual = ":tools",
    visibility = ["//api/tasks:__subpackages__"],
)

go_test(
    name = "tools_test",
    srcs = [
        "projects_test.go",
        "tags_test.go",
        "tasks_test.go",
    ],
    embed = [":tools"],
    deps = [
        "//api/tasks/internal/httpserver/middleware",
        "//api/tasks/internal/model",
        "//api/tasks/internal/repo",
        "//api/tasks/internal/testing/mock",
        "//libs/hs-common/repo",
        "@com_github_modelcontextprotocol_go_sdk//mcp",
    ],
)
